04/10/2022:
	- Modification to TPTImage's getTile() and TileManager's getRegion() to handle images with different numbers of
	  channels or bits within the same image sequence or stack


03/10/2022:
	- Added ability to apply a convolution kernel to an image through the CNV parameter. Kernel matrices should contain
	  comma separated values (int or floats) and be enclosed in square brackets: CNV=[a,b,c,d,e,f ...]. Kernels should
	  be 3x3 or 5x5 elements in size only. Several pre-defined kernels can be used: gaussian, sharpen, emboss, sobel,
	  laplace, prewitt and scharr, which can be used like so: CNV=sharpen. The CNV functionality is only available for
	  CVT (and equivalent IIIF requests) and not for tile requests due to edge distorsions (wrapping is used here).


29/09/2022:
	- Update to Rawtile class to ensure enough memory allocation takes place when dataLength is greater than the raw
	  space required for the given sample type, width, height and number of channels.
	- Re-factoring of MINMAX handler: channel indices now start from zero and a dash "-" can be used to indicate that
	  the min and max should be applied to all channels.


28/09/2002:
	- Updated KakaduImage and OpenJPEGImage classes to use Rawtile's new allocate() function. Also updated Transform
	  class to correctly update Rawtile capacity value


27/09/2022:
	- Major changes to the Rawtile class to enable move assignment and copy operators for C++11 compatible compilers.
	  This eliminates a number of unnecessary memory allocation and copy operations when using Rawtile objects,
	  improving speed and reducing memory usage


26/09/2022:
	- Modified SDS parameter parsing to allow single values to be passed as well as comma-separated pairs of values.
	- Added setMimeType() function to IIPResponse class to allow response Mime type to be modified on-demand.


22/09/2022:
	- Added check for empty HTTP CONTENT_LENGTH to avoid risk of passing NULL pointer to atoi()


21/09/2022: